--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-config": "^1.4.5",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.9",
@@ -26,6 +27,8 @@
     "react-native-screens": "^3.10.2",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-video": "^5.2.0",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
