--- a/ios/AppFBO/Info.plist
+++ b/ios/AppFBO/Info.plist
@@ -57,5 +57,38 @@
 		<string>Poppins-Regular.ttf</string>
 		<string>FontAwesome.ttf</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+	<key>CFBundleURLSchemes</key>
+	<array>
+		<string>fb4742605199192429</string>
+	</array>
+	</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>4742605199192429</string>
+	<key>FacebookClientToken</key>
+	<string>56234255cf6193013a213528b0dcefd1</string>
+	<key>FacebookDisplayName</key>
+	<string>AppArticulos</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>fbapi</string>
+	<string>fbapi20130214</string>
+	<string>fbapi20130410</string>
+	<string>fbapi20130702</string>
+	<string>fbapi20131010</string>
+	<string>fbapi20131219</string>
+	<string>fbapi20140410</string>
+	<string>fbapi20140116</string>
+	<string>fbapi20150313</string>
+	<string>fbapi20150629</string>
+	<string>fbapi20160328</string>
+	<string>fbauth</string>
+	<string>fb-messenger-share-api</string>
+	<string>fbauth2</string>
+	<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
