--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,7 +12,8 @@ target 'AppFBO' do
     :hermes_enabled => false
   )
 
-
+  pod 'GoogleSignIn', '~> 6.0.2'
+  
   target 'AppFBOTests' do
     inherit! :complete
     # Pods for testing
