--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.25.0",
+    "base-64": "^1.0.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-base64": "^0.2.1",
     "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
     "react-native-fbsdk-next": "^7.0.1",
