--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
     "react-native-fbsdk-next": "^7.0.1",
+    "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.9",
