--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
