--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
-    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
