--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "react-native-elements": "^3.4.2",
     "react-native-fbsdk-next": "^7.0.1",
     "react-native-flash-message": "^0.2.1",
+    "react-native-flatlist-pagination-hook": "^0.1.5",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
     "react-native-notifications": "^4.2.4",
     "react-native-pager-view": "^5.4.9",
+    "react-native-pagination": "^1.5.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
