--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-video": "^5.2.0",
     "react-native-vimeo-iframe": "^1.0.4",
     "react-native-webview": "^11.17.2",
-    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
