--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-notifications": "^4.2.4",
     "react-native-pager-view": "^5.4.9",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
