--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-firebase/firestore": "^14.5.0",
+    "@react-native-firebase/functions": "^14.7.0",
     "@react-native-firebase/messaging": "^14.5.1",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
