--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-config": "^1.4.5",
+    "react-native-create-thumbnail": "^1.5.1",
     "react-native-elements": "^3.4.2",
     "react-native-fbsdk-next": "^7.0.1",
     "react-native-flash-message": "^0.2.1",
@@ -41,6 +42,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
+    "react-native-thumbnail-video": "^0.1.2",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
     "react-native-vimeo-iframe": "^1.0.4",
