--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/APP-FBO-ICONO.png"
-      android:roundIcon="@mipmap/APP-FBO-ICONO.png"
+      android:icon="@mipmap/app_fbo_icono"
+      android:roundIcon="@mipmap/app_fbo_icono"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <activity
