--- a/package.json
+++ b/package.json
@@ -1,64 +1,66 @@
 {
-  "name": "appfbo",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.17",
-    "@react-native-firebase/app": "^14.3.0",
-    "@react-native-firebase/auth": "^14.3.0",
-    "@react-native-firebase/firestore": "^14.5.0",
-    "@react-native-firebase/messaging": "^14.5.1",
-    "@react-native-google-signin/google-signin": "^7.0.4",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/material-top-tabs": "^6.0.6",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "base-64": "^1.0.0",
-    "react": "17.0.2",
-    "react-native": "0.67.1",
-    "react-native-config": "^1.4.5",
-    "react-native-elements": "^3.4.2",
-    "react-native-fbsdk-next": "^7.0.1",
-    "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "^2.2.0",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-modal": "^13.0.0",
-    "react-native-notifications": "^4.2.4",
-    "react-native-pager-view": "^5.4.9",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2",
-    "react-native-svg": "^12.1.1",
-    "react-native-swiper-flatlist": "^3.0.16",
-    "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.1.0",
-    "react-native-video": "^5.2.0",
-    "react-native-vimeo-iframe": "^1.0.4",
-    "react-native-webview": "^11.17.2",
-    "react-native-youtube": "^2.0.2",
-    "react-redux": "^7.2.6",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "17.0.2"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+    "name": "appfbo",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "start": "react-native start",
+        "test": "jest",
+        "lint": "eslint .",
+        "DevelopmentMode": "node Enviroment/index.js Development",
+        "ProductionMode": "node Enviroment/index.js Production"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.15.17",
+        "@react-native-firebase/app": "^14.3.0",
+        "@react-native-firebase/auth": "^14.3.0",
+        "@react-native-firebase/firestore": "^14.5.0",
+        "@react-native-firebase/messaging": "^14.5.1",
+        "@react-native-google-signin/google-signin": "^7.0.4",
+        "@react-navigation/bottom-tabs": "^6.0.9",
+        "@react-navigation/material-top-tabs": "^6.0.6",
+        "@react-navigation/native": "^6.0.6",
+        "@react-navigation/stack": "^6.0.11",
+        "base-64": "^1.0.0",
+        "react": "17.0.2",
+        "react-native": "0.67.1",
+        "react-native-config": "^1.4.5",
+        "react-native-elements": "^3.4.2",
+        "react-native-fbsdk-next": "^7.0.1",
+        "react-native-flash-message": "^0.2.1",
+        "react-native-gesture-handler": "^2.2.0",
+        "react-native-linear-gradient": "^2.5.6",
+        "react-native-modal": "^13.0.0",
+        "react-native-notifications": "^4.2.4",
+        "react-native-pager-view": "^5.4.9",
+        "react-native-safe-area-context": "^3.3.2",
+        "react-native-screens": "^3.10.2",
+        "react-native-svg": "^12.1.1",
+        "react-native-swiper-flatlist": "^3.0.16",
+        "react-native-tab-view": "^3.1.1",
+        "react-native-vector-icons": "^9.1.0",
+        "react-native-video": "^5.2.0",
+        "react-native-vimeo-iframe": "^1.0.4",
+        "react-native-webview": "^11.17.2",
+        "react-native-youtube": "^2.0.2",
+        "react-redux": "^7.2.6",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@babel/runtime": "^7.12.5",
+        "@react-native-community/eslint-config": "^2.0.0",
+        "babel-jest": "^26.6.3",
+        "eslint": "7.14.0",
+        "jest": "^26.6.3",
+        "metro-react-native-babel-preset": "^0.66.2",
+        "react-native-svg-transformer": "^1.0.0",
+        "react-test-renderer": "17.0.2"
+    },
+    "jest": {
+        "preset": "react-native"
+    }
 }
