--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@react-native-firebase/app": "^14.3.0",
         "@react-native-firebase/auth": "^14.3.0",
         "@react-native-firebase/firestore": "^14.5.0",
+        "@react-native-firebase/functions": "^14.8.1",
         "@react-native-firebase/messaging": "^14.5.1",
         "@react-native-google-signin/google-signin": "^7.0.4",
         "@react-navigation/bottom-tabs": "^6.0.9",
@@ -34,16 +35,19 @@
         "react-native-modal": "^13.0.0",
         "react-native-notifications": "^4.2.4",
         "react-native-pager-view": "^5.4.9",
+        "react-native-render-html": "^6.3.4",
         "react-native-safe-area-context": "^3.3.2",
         "react-native-screens": "^3.10.2",
         "react-native-svg": "^12.1.1",
         "react-native-swiper-flatlist": "^3.0.16",
         "react-native-tab-view": "^3.1.1",
+        "react-native-thumbnail-video": "^0.1.2",
         "react-native-vector-icons": "^9.1.0",
         "react-native-video": "^5.2.0",
         "react-native-vimeo-iframe": "^1.0.4",
         "react-native-webview": "^11.17.2",
         "react-native-youtube": "^2.0.2",
+        "react-native-youtube-iframe": "^2.2.2",
         "react-redux": "^7.2.6",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
